make height auto on monstrously large image

--- a/_posts/2015-08-15-tdd-irl.md
+++ b/_posts/2015-08-15-tdd-irl.md
@@ -5,6 +5,6 @@ description:
 category: thoughts
 ---
 
-![github pages](/assets/img/TDD-IRL.png)
+<img style="float: center; height: auto; width: 100%" src="/assets/img/TDD-IRL.png">
 
 
